--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-
 
+      - name: Install gdk-3.0 on Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+
+      - name: Install gdk-3.0 on macOS
+        if: matrix.os == 'macos-latest'
+        run: brew install gtk+3
+
       - name: Build Tauri app
         run: pnpm tauri build
 
