--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest, macos-latest]
 
     steps:
       - name: Checkout repository
@@ -61,11 +61,11 @@ jobs:
 
       - name: Install gdk-3.0 and libsoup-3.0 on Linux
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libsoup3.0
+        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libsoup3.0 javascriptcoregtk-4.1
 
       - name: Install gdk-3.0 and libsoup-3.0 on macOS
         if: matrix.os == 'macos-latest'
-        run: brew install gtk+3 libsoup
+        run: brew install gtk+3 libsoup javascriptcoregtk-4.1
 
       - name: Build Tauri app
         run: pnpm tauri build
