--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: "18"
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -77,54 +77,25 @@ jobs:
           path: src-tauri/target/release/bundle/
 
   release:
-    runs-on: ubuntu-latest
+    # create release workflow tagging de version
     needs: build
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Create Release
+      - name: Create release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: med-ex-${{ env.VERSION }}
-          release_name: "Release ${{ env.VERSION }}"
-          body: |
-            Release of version ${{ env.VERSION }}.
+          tag_name: ${{ github.sha }}
+          release_name: Release ${{ github.sha }}
           draft: false
           prerelease: false
 
-      - name: Upload Linux asset
-        uses: actions/upload-release-asset@v1
-        if: always() && matrix.os == 'ubuntu-latest'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: src-tauri/target/release/bundle/*
-          asset_name: tauri-app-linux.zip
-          asset_content_type: application/zip
-
-      - name: Upload macOS asset
-        uses: actions/upload-release-asset@v1
-        if: always() && matrix.os == 'macos-latest'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: src-tauri/target/release/bundle/*
-          asset_name: tauri-app-macos.zip
-          asset_content_type: application/zip
-
-      - name: Upload Windows asset
-        uses: actions/upload-release-asset@v1
-        if: always() && matrix.os == 'windows-latest'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: src-tauri/target/release/bundle/*
-          asset_name: tauri-app-windows.zip
-          asset_content_type: application/zip
+          name: tauri-app-${{ runner.os }}
