--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest]
 
+    env:
+      VERSION: ${{ github.sha }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -77,25 +79,58 @@ jobs:
           path: src-tauri/target/release/bundle/
 
   release:
-    # create release workflow tagging de version
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Create release
+      - name: Get version from package.json
+        id: get_version
+        run: echo "VERSION=$(jq -r '.version' < package.json)" >> $GITHUB_ENV
+
+      - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
+          tag_name: med-ex-${{ env.VERSION }}
+          release_name: "Release ${{ env.VERSION }}"
+          body: |
+            Release of version ${{ env.VERSION }}.
           draft: false
           prerelease: false
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+      - name: Upload Linux asset
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: tauri-app-${{ runner.os }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: src-tauri/target/release/bundle/*
+          asset_name: tauri-app-linux.zip
+          asset_content_type: application/zip
+
+      - name: Upload macOS asset
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: src-tauri/target/release/bundle/*
+          asset_name: tauri-app-macos.zip
+          asset_content_type: application/zip
+
+      - name: Upload Windows asset
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: src-tauri/target/release/bundle/*
+          asset_name: tauri-app-windows.zip
+          asset_content_type: application/zip
