--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ on:
   pull_request:
     branches:
       - main
-
+permissions:
+  contents: read
+  packages: write
+  issues: write
 jobs:
   build:
     runs-on: ${{ matrix.os }}
