--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,7 @@ jobs:
           path: src-tauri/target/release/bundle/
 
   release:
+    permissions: write-all
     runs-on: ubuntu-latest
     needs: build
     steps:
