--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,85 +1,118 @@
-name: Build and Publish Tauri App
+name: "release"
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
+  create-release:
+    permissions:
+      contents: write
+    runs-on: ubuntu-20.04
+    outputs:
+      release_id: ${{ steps.create-release.outputs.result }}
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: "lts/*"
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
-          
-      - name: Install Rust
-        run: |
-          rustup install stable
-          rustup default stable
-
-      - name: Install Sveltekit
-        run: |
-          pnpm install -g @sveltejs/adapter-static
-
-      - name: Install Tauri CLI
-        run: |
-          pnpm install -g @tauri-apps/cli
-          pnpm install -g @tauri-apps/api
-
-      - name: Install project dependencies
-        run: pnpm install
-
-      - name: Build Tauri app
-        run: pnpm tauri build
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
         with:
-          name: tauri-app
-          path: src-tauri/target/release/bundle/
+          version: 'latest'
 
-  publish:
-    needs: build-windows
-    runs-on: ubuntu-latest
+      - name: Get version
+        run: echo "PACKAGE_VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
+
+      - name: Create release
+        id: create-release
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data } = await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: `v${process.env.PACKAGE_VERSION}`,
+              name: `v${process.env.PACKAGE_VERSION}`,
+              body: '*This release was generated automatically using GitHub Actions.*',
+              draft: true,
+              prerelease: false
+            })
+            return data.id
+
+  build-tauri:
+    needs: create-release
+    permissions:
+      contents: write
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [windows-latest]
+
+    runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Download artifact
-        uses: actions/download-artifact@v2
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          name: tauri-app
-          path: ./release
+          toolchain: stable
 
-      - name: Commit and push artifact
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: v2 -> v2/target
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+
+      - name: Install apt dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-latest'
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout -b release-artifact
-          mkdir -p artifacts
-          mv ./release/* artifacts/
-          git add artifacts/
-          git commit -m "Auto: Add build artifact"
-          git push origin release-artifact --force
+          sudo apt-get update
+          sudo apt install -y --no-install-recommends libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev patchelf
 
-      - name: Create Release
-        uses: actions/create-release@v1
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 'latest'
+
+      - name: Install frontend dependencies
+        run: pnpm -C templates/next install
+
+      - name: Build the app
+        uses: tauri-apps/tauri-action@dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: 'release-${{ github.sha }}'
-          release_name: 'Release ${{ github.sha }}'
-          draft: false
-          prerelease: false
-          files: ./artifacts/*
+          projectPath: ./templates/next
+          releaseId: ${{ needs.create-release.outputs.release_id }}
+
+  publish-release:
+    permissions:
+      contents: write
+    runs-on: ubuntu-20.04
+    needs: [create-release, build-tauri]
+
+    steps:
+      - name: Publish release
+        id: publish-release
+        uses: actions/github-script@v6
+        env:
+          release_id: ${{ needs.create-release.outputs.release_id }}
+        with:
+          script: |
+            github.rest.repos.updateRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: process.env.release_id,
+              draft: false,
+              prerelease: false
+            })
