--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,18 +85,15 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 'latest'
 
       - name: Install frontend dependencies
-        run: pnpm -C templates/next install
+        run: pnpm install
 
       - name: Build the app
         uses: tauri-apps/tauri-action@dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          projectPath: ./templates/next
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
   publish-release:
