--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "lts/*"
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Get version
-        run: |
-          PACKAGE_VERSION=$(node -p -e "require('./package.json').version") >> $GITHUB_ENV
+      - run: |
+          echo 'PACKAGE_VERSION<<EOF' >> $GITHUB_ENV
+          cat ./package.json >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
+      - run: |
+          echo '${{ fromJson(env.PACKAGE_JSON).version }}'
 
       - name: Create release
         id: create-release
@@ -44,7 +38,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `v${process.env.PACKAGE_VERSION}`,
-              name: `v${process.env.PACKAGE_VERSION}`,
+              name: `v${fromJson(env.PACKAGE_JSON).version}`,
               body: '*This release was generated automatically using GitHub Actions.*',
               draft: true,
               prerelease: false
