--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
           echo 'PACKAGE_VERSION<<EOF' >> $GITHUB_ENV
           cat ./package.json >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
+          echo env.PACKAGE_VERSION
       - run: |
           echo '${{ fromJson(process.env.PACKAGE_VERSION).version }}'
 
