--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,8 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `v${env.APP_VERSION}`,
-              name: `v${env.APP_VERSION}`,
+              tag_name: `v${process.env.APP_VERSION}`,
+              name: `v${process.env.APP_VERSION}`,
               body: '*This release was generated automatically using GitHub Actions.*',
               draft: true,
               prerelease: false
