--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
           echo env.PACKAGE_VERSION
           
       - name: Print Version
+        uses: actions/github-script@v7
         id: set-version
         with: 
           script: |
