--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,18 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Check Version
-        id: raw-version
-        uses: actions/github-script@v7
-        with:
-          script: |
+        run: |
             echo 'PACKAGE_VERSION<<EOF' >> $GITHUB_ENV
             cat ./package.json >> $GITHUB_ENV
             echo 'EOF' >> $GITHUB_ENV
             return "${{ fromJson(env.PACKAGE_VERSION).version }}"
+
+      - name: Set Raw Version
+        id: raw-version
+        uses: actions/github-script@v7
+        with:
           result-encoding: string
+          script: return "${{ fromJson(env.PACKAGE_VERSION).version }}"
 
       - name: Set Date
         run: |
