--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Get version
         run: |
           PACKAGE_VERSION=$(node -p -e "require('./package.json').version") >> $GITHUB_ENV
+          echo $PACKAGE_VERSION
 
       - name: Create release
         id: create-release
@@ -45,6 +46,7 @@ jobs:
               repo: context.repo.repo,
               tag_name: `v${process.env.PACKAGE_VERSION}`,
               name: `v${process.env.PACKAGE_VERSION}`,
+              release_name: `v${process.env.PACKAGE_VERSION}`,
               body: '*This release was generated automatically using GitHub Actions.*',
               draft: true,
               prerelease: false
@@ -119,8 +121,6 @@ jobs:
               release_id: process.env.release_id,
               draft: false,
               prerelease: false,
-              tag_name: `v${process.env.VERSION}`,
-              release_name: `v${process.env.VERSION}`
             })
       - name: Delete release if build failed
         if: failure()
