--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,8 +123,22 @@ jobs:
 
     steps:
       - name: Publish release
+        id: check-variables
+        uses: actions/github-script@v7
+        env:
+          release_id: ${{ needs.create-release.outputs.release_id }}
+          tag_version: ${{ needs.create-release.output.tag_version }}
+          full_version: ${{ needs.create-release.output.full_version }}
+        with:
+          script: |
+            echo `simple: v${process.env.tag_version}`
+            echo `double: v${{process.env.tag_version}}`
+            echo `circle: v$(env.tag_version)`
+            
+        
+      - name: Publish release
         id: publish-release
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         env:
           release_id: ${{ needs.create-release.outputs.release_id }}
           tag_version: ${{ needs.create-release.output.tag_version }}
@@ -142,7 +156,7 @@ jobs:
             })
       - name: Delete release if build failed
         if: failure()
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             github.rest.repos.deleteRelease({
