--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,13 +73,11 @@ jobs:
     steps:
       - name: Verify Data
         id: check-variables
-        uses: actions/github-script@v7
         env:
           release_id: ${{ needs.create-release.outputs.release_id }}
           tag_version: ${{ needs.create-release.output.tag_version }}
           full_version: ${{ needs.create-release.output.full_version }}
-        with:
-          script: |
+        run: |
             echo `simple: v${env.tag_version}`
             echo `double: v${{env.tag_version}}`
             echo `circle: v$(env.tag_version)`
