--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,9 +78,9 @@ jobs:
           tag_version: ${{ needs.create-release.output.tag_version }}
           full_version: ${{ needs.create-release.output.full_version }}
         run: |
-            echo `simple: v${env.tag_version}`
-            echo `double: v${{env.tag_version}}`
-            echo `circle: v$(env.tag_version)`
+            echo `simple: v$env.tag_version`;
+            echo `doble: v${{env.tag_version}}`;
+            echo `circle: v$(env.tag_version)`;
             
   build-tauri:
     needs: create-release
