--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "2.0.0-beta.5",
     "@tauri-apps/plugin-fs": "2.0.0-beta.5",
+    "@tauri-apps/plugin-process": "2.0.0-beta.5",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-sql": "2.0.0-beta.5",
+    "@tauri-apps/plugin-updater": "2.0.0-beta.5",
     "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
     "formsnap": "^1.0.0",
