--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,3 +19,5 @@ serde_json = "1"
 tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
 tauri-plugin-fs = "2.0.0-beta"
 tauri-plugin-dialog = "2.0.0-beta"
+tauri-plugin-updater = "2.0.0-beta"
+tauri-plugin-process = "2.0.0-beta"
