--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,7 +129,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.PK_RELEASE }}
-          TAURI_SIGNING_PRIVATE_KEY_SECRET: "ChangeMe"
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.PK_RELEASE_PASS }}
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
