--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,13 @@ jobs:
           GIST_ID: fbccc6afca03e7ab1c0f7548c79179a5
           GIST_TOKEN: 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
         run: |
-          curl -X PATCH \
-            -H "Authorization: token $GIST_TOKEN" \
-            -d @- \
-            https://api.github.com/gists/$GIST_ID << EOF
+          curl -L \
+            -X PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GIST_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/gists/$GIST_ID \
+            --data-binary @- << EOF
           {
             "files": {
               "version.json": {
