--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
             --data-binary @- << EOF
           {
             "files": {
-              "version.json": {
+              "medx_release.json": {
                 "content": "{
                   "version": "v0.0.0",
                   "notes": "nulleable",
