--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,17 +28,7 @@ jobs:
           {
             "files": {
               "medx_release.json": {
-                "content": "{
-                  "version": "v0.0.0",
-                  "notes": "nulleable",
-                  "pub_date": "2020-06-20T08:10:26.882Z",
-                  "platforms": {
-                    "darwin-aarch64": {
-                      "signature": "",
-                      "url": "lero lero"
-                    }
-                  }
-                }"
+                "content": "update"
               }
             }
           }
