--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           curl -L \
             -X PATCH \
-            -H "Accept: application/vnd.github+json" \
+            -H "Accept: application/vnd.github.raw+json" \
             -H "Authorization: Bearer $GIST_TOKEN" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/gists/$GIST_ID \
@@ -28,7 +28,17 @@ jobs:
           {
             "files": {
               "medx_release.json": {
-                "content": "update"
+                "content": "{
+                  "version": "v0.0.0",
+                  "notes": "nulleable",
+                  "pub_date": "2020-06-20T08:10:26.882Z",
+                  "platforms": {
+                    "darwin-aarch64": {
+                      "signature": "",
+                      "url": "lero lero"
+                    }
+                  }
+                }"
               }
             }
           }
