--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,11 +48,11 @@ jobs:
         id: gist_content
         uses: gorgbus/gist-actions@main
         env:
-          GITHUB_TOKEN: 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
+          GITHUB_TOKEN: ${{ secrets.GIST_SECRET }}
         with:
           action: "get"
-          gist_id: "fbccc6afca03e7ab1c0f7548c79179a5"
-          file_name: "medx_release.json"
+          gist_id: ${{ env.GIST_ID }}
+          file_name: ${{ env.GIST_FILENAME }}
 
       - name: Change content
         id: new_gist
@@ -65,9 +65,9 @@ jobs:
       - name: Update gist
         uses: gorgbus/gist-actions@main
         env:
-          GITHUB_TOKEN: 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
+          GITHUB_TOKEN: ${{ secrets.GIST_SECRET }}
         with:
           action: "update"
-          gist_id: "fbccc6afca03e7ab1c0f7548c79179a5"
-          file_name: "medx_release.json"
+          gist_id: ${{ env.GIST_ID }}
+          file_name: ${{ env.GIST_FILENAME }}
           content: ${{ steps.new_gist.outputs.content }}
