--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,46 +14,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Update Gist
-        env:
-          GIST_ID: fbccc6afca03e7ab1c0f7548c79179a5
-          GIST_TOKEN: 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
-        run: |
-          curl -L \
-            -X PATCH \
-            -H "Accept: application/vnd.github.raw+json" \
-            -H "Authorization: Bearer $GIST_TOKEN" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/gists/$GIST_ID \
-            --data-binary @- << EOF
-          {
-            "files": {
-              "medx_release.json": {
-                "content": "{
-                  \"version\": \"v0.0.0\",
-                  \"notes\": \"nulleable\",
-                  \"pub_date\": \"2020-06-20T08:10:26.882Z\",
-                  \"platforms\": {
-                    \"darwin-aarch64\": {
-                      \"signature\": \"\",
-                      \"url\": \"lero lero\"
-                    }
-                  }
-                }"
-              }
-            }
-          }
-          EOF
-
       - name: Read gist
         id: gist_content
         uses: gorgbus/gist-actions@main
         env:
           GITHUB_TOKEN: ${{ secrets.GIST_SECRET }}
+          GIST_ID: ${{ vars.GIST_ID }}
+          GIST_FILENAME: ${{ vars.GIST_ID }}
         with:
           action: "get"
-          gist_id: ${{ env.GIST_ID }}
-          file_name: ${{ env.GIST_FILENAME }}
+          gist_id: $GIST_ID
+          file_name: $GIST_FILENAME
 
       - name: Change content
         id: new_gist
