--- a/test.yml
+++ b/test.yml
@@ -38,6 +38,8 @@ jobs:
         uses: gorgbus/gist-actions@main
         env:
           GITHUB_TOKEN: ${{ secrets.GIST_SECRET }}
+          GIST_ID: ${{ vars.GIST_ID }}
+          GIST_FILENAME: ${{ vars.GIST_FILENAME }}
         with:
           action: "update"
           gist_id: ${{ env.GIST_ID }}
