Actualizar main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,10 +92,10 @@ jobs:
         include:
           - platform: "macos-latest" # for Arm based macs (M1 and above).
             args: "--target aarch64-apple-darwin"
-          - platform: "macos-latest" # for Intel based macs.
-            args: "--target x86_64-apple-darwin"
-          - platform: "windows-latest"
-            args: ""
+          #- platform: "macos-latest" # for Intel based macs.
+            #args: "--target x86_64-apple-darwin"
+          #- platform: "windows-latest"
+            #args: ""
           - platform: "windows-latest"
             args: "--target i686-pc-windows-msvc"
     environment: Release
