--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medx-medical_records",
-  "version": "0.5.2",
+  "version": "0.5.1",
   "description": "",
   "type": "module",
   "scripts": {
@@ -38,6 +38,7 @@
     "postcss": "^8.4.38",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-headless-table": "^0.18.2",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
