--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,5 +19,6 @@ serde_json = "1"
 tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
 tauri-plugin-fs = "2.0.0-beta"
 tauri-plugin-dialog = "2.0.0-beta"
+[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-updater = "2.0.0-beta"
 tauri-plugin-process = "2.0.0-beta"
