--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -188,7 +188,8 @@ jobs:
         id: read_json
         run: |
           JSON_CONTENT=$(cat ${{ fromJson(steps.json_file.outputs.downloaded_files)[0] }})
-          echo "json_content=$JSON_CONTENT" >> $GITHUB_ENV
+          echo $JSON_CONTENT;
+          echo "::set-output name=json_content::$JSON_CONTENT"
 
       - name: Update gist
         uses: gorgbus/gist-actions@main
@@ -196,7 +197,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIST_SECRET }}
           GIST_ID: ${{ vars.GIST_ID }}
           GIST_FILENAME: ${{ vars.GIST_FILENAME }}
-          JSON_CONTENT: ${{ env.json_content }}
+          JSON_CONTENT: ${{ steps.read_json.outputs.json_content }}
         with:
           action: "update"
           gist_id: ${{ env.GIST_ID }}
